design add product form in owner template

--- a/app/templates/owner/owner_post.html
+++ b/app/templates/owner/owner_post.html
@@ -16,7 +16,7 @@
 
             <h2>Latest Post</h2>
             <div class="postpage_content">
-                <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
+                <label><a href="#">7 Steps To OvercomeFRONTATION</a></label>
                 <a href="#"><span class="fas fa-edit"></span></a>
                 <a href="#"><span class="fas fa-trash"></span></a>
                 <a href="#"><span class="fas fa-arrow-right"></span></a>
