--- a/app/templates/owner/owner_product.html
+++ b/app/templates/owner/owner_product.html
@@ -55,7 +55,7 @@
 
 
             <div class="postpage_content">
-                <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
+                <label><a href="#">7 Steps & Get COMFY W/ CONFRONTATION</a></label>
                 <a href="#"><span class="fas fa-edit"></span></a>
                 <a href="#"><span class="fas fa-trash"></span></a>
                 <a href="#"><span class="fas fa-arrow-right"></span></a>
