--- a/app/templates/owner/owner_subscriber.html
+++ b/app/templates/owner/owner_subscriber.html
@@ -38,19 +38,19 @@
 
 
             <div class="subscriber_content">
-                <label>Example@gmail.com</label>
+                <label>Example1@gmail.com</label>
                 <a href="#"><span class="fas fa-trash"></span></a>
             </div>
 
 
             <div class="subscriber_content">
-                <label>Example@gmail.com</label>
+                <label>Example11123@gmail.com</label>
                 <a href="#"><span class="fas fa-trash"></span></a>
             </div>
 
 
             <div class="subscriber_content">
-                <label>Example@gmail.com</label>
+                <label>Example11@gmail.com</label>
                 <a href="#"><span class="fas fa-trash"></span></a>
             </div>
 
