--- a/app/static/style/owner.css
+++ b/app/static/style/owner.css
@@ -359,6 +359,11 @@
 }
 
 
+.postpage_content label{
+    width: 80%;
+}
+
+
 .postpage_content label a{
     color: #34495e;
 }
@@ -458,6 +463,7 @@
 
 
 .subscriber_content label{
+    width: 35%;
     color: #34495e;
 }
 
@@ -501,6 +507,16 @@
 
 
 form input[type="text"]{
+    height: 8vh;
+    border: none;
+    outline: none;
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
+    border-bottom: 1px solid #34495e;
+}
+
+
+form input[type="number"]{
     height: 8vh;
     border: none;
     outline: none;
