--- a/app/templates/owner/owner_index.html
+++ b/app/templates/owner/owner_index.html
@@ -47,7 +47,7 @@
             <div class="post">
                 <h2>Latest Post</h2>
                 <div class="post_content">
-                    <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
+                    <label><a href=" {{ url_for('owner_post_view') }} ">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
                     <a href="#"><span class="fas fa-edit"></span></a>
                     <a href="#"><span class="fas fa-trash"></span></a>
                 </div>
