--- a/app/templates/owner/owner_post.html
+++ b/app/templates/owner/owner_post.html
@@ -16,10 +16,10 @@
 
             <h2>Latest Post</h2>
             <div class="postpage_content">
-                <label><a href="#">7 Steps To OvercomeFRONTATION</a></label>
+                <label><a href=" {{ url_for('owner_post_view') }} ">7 Steps To OvercomeFRONTATION</a></label>
                 <a href="#"><span class="fas fa-edit"></span></a>
                 <a href="#"><span class="fas fa-trash"></span></a>
-                <a href="#"><span class="fas fa-arrow-right"></span></a>
+                <a href=" {{ url_for('owner_post_view') }} "><span class="fas fa-arrow-right"></span></a>
             </div>
 
 
