--- a/app/templates/owner/owner_product.html
+++ b/app/templates/owner/owner_product.html
@@ -15,10 +15,10 @@
 
             <h2>Latest Product</h2>
             <div class="postpage_content">
-                <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
+                <label><a href=" {{ url_for('owner_product_view') }} ">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
                 <a href="#"><span class="fas fa-edit"></span></a>
                 <a href="#"><span class="fas fa-trash"></span></a>
-                <a href="#"><span class="fas fa-arrow-right"></span></a>
+                <a href=" {{ url_for('owner_product_view') }} "><span class="fas fa-arrow-right"></span></a>
             </div>
 
 
