--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -575,8 +575,14 @@ footer{
 
 
 .shoping_card h2{
+    color: #34495e;
     font-size: 15px;
     text-transform: capitalize;
+}
+
+
+.shoping_card span{
+    color: #34495e;
 }
 
 
