move pages into client folder and some changies in css

--- a/app/templates/client/blog.html
+++ b/app/templates/client/blog.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'client/base.html' %}
 
 {% block content %}
 
 <header>
-    {% include '_nav.html' %}
+    {% include 'client/_nav.html' %}
 
     <div class="blog_header_content">
         <h1>GET Best Product TIPS FOR YOUR SUCCESS</h1>
@@ -114,7 +114,7 @@
     <a href="">previous</a>
 </div>
 
-{% include '_footer.html' %}
+{% include 'client/_footer.html' %}
 
 
 
