--- a/app/templates/client/post_view.html
+++ b/app/templates/client/post_view.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'client/base.html' %}
 
 
 
 {% block content %}
 
 <div class="post_nav_color">
-    {% include '_nav.html' %}
+    {% include 'client/_nav.html' %}
 </div>
 
 <div class="post_view_page">
@@ -60,6 +60,6 @@
     </div>
 </div>
 
-{% include '_footer.html' %}
+{% include 'client/_footer.html' %}
 
 {% endblock %}
