--- a/app/templates/client/shop.html
+++ b/app/templates/client/shop.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'client/base.html' %}
 
 
 {% block content %}
 <header>
-    {% include '_nav.html' %}
+    {% include 'client/_nav.html' %}
     
 
     <div class="shop_content">
@@ -77,6 +77,6 @@
 
 </div>
 
-{% include '_footer.html' %}
+{% include 'client/_footer.html' %}
 
 {% endblock %}
