--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -766,7 +766,7 @@ footer{
 
 
 .post_view_content h1{
-    color: #11151a;
+    color: #34495e;
     margin-bottom: 10px;
     text-transform: capitalize;
 }
@@ -792,16 +792,18 @@ footer{
     width: 20%;
     height: auto;
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
 }
 
 
 .post_rightside_content .post_subscribe_form{
     width: 100%;
-    height: 40vh;
+    height: 50vh;
     border-radius: 10px;
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
     background-color: #9bc634;
 }
@@ -809,7 +811,7 @@ footer{
 
 .post_subscribe_form h2{
     color: #FFFFFF;
-    margin-top: 40px;
+    margin-bottom: 20px;
     text-transform: uppercase;
 }
 
@@ -828,8 +830,7 @@ footer{
     outline: none;
     font-size: 1.2rem;
     padding-left: 5px;
-    margin-top: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     box-shadow: 2px 2px 2px grey;
 }
 
@@ -843,7 +844,6 @@ footer{
     font-size: 1.2rem;
     font-family: inherit;
     font-weight: bold;
-    margin-top: 10px;
     box-shadow: 2px 2px 2px grey;
     background-color: #9bc634;
     border: 1px solid #ecf0f1;
@@ -869,7 +869,7 @@ footer{
 
 
 .latest_post h4{
-    color: #11151a;
+    color:#34495e;
     text-align: center;
     letter-spacing: 3px;
     margin-top: 20px;
@@ -883,6 +883,7 @@ footer{
     padding-right: 7px;
     font-size: 1.1rem;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 
