--- a/app/templates/client/about.html
+++ b/app/templates/client/about.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'client/base.html' %}
 
 
 {% block content %}
 
 <header>
 
-    {% include '_nav.html' %}
+    {% include 'client/_nav.html' %}
 
     <div class="about_page">
         <div class="about_content">
