--- a/app/templates/client/index.html
+++ b/app/templates/client/index.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'client/base.html' %}
 
 {% block content %}
 
 <header>
-    {% include '_nav.html' %}
+    {% include 'client/_nav.html' %}
 
     <div class="main_content">
         <div class="content">
@@ -91,7 +91,7 @@
 </div>
 
 
-{% include '_footer.html' %}
+{% include 'client/_footer.html' %}
 
 
 {% endblock %}
