--- a/app/static/style/owner.css
+++ b/app/static/style/owner.css
@@ -587,7 +587,7 @@ form button:hover{
 
 .post_detial_view img{
     width: 100%;
-    height: 90vh;
+    height: auto;
     padding-bottom: 1rem;
 }
 
