--- a/app/templates/owner/owner_index.html
+++ b/app/templates/owner/owner_index.html
@@ -15,7 +15,7 @@
         <div class="home_card">
             <div class="card">
                 <div class="card_content">
-                    <h1>100</h1>
+                    <h1>{{posts|length}}</h1>
                     <p>Posts</p>
                 </div>
                 <span class="fas fa-store-alt"></span>
@@ -46,13 +46,16 @@
         <div class="post_and_subscribe_container">
             <div class="post">
                 <h2>Latest Post</h2>
+
+                {% for post in posts %}
                 <div class="post_content">
-                    <label><a href=" {{ url_for('owner_post_view') }} ">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
-                    <a href="#"><span class="fas fa-edit"></span></a>
-                    <a href="#"><span class="fas fa-trash"></span></a>
+                    <label><a href=" {{ url_for('owner_post_view', id=post.id) }} "> {{ post.title }} </a></label>
+                    <a href=" {{ url_for('edit_post', id=post.id) }} "><span class="fas fa-edit"></span></a>
+                    <a href=" {{ url_for('delete_post', id=post.id) }} "><span class="fas fa-trash"></span></a>
                 </div>
 
-                <div class="post_content">
+                {% endfor %}
+                <!-- <div class="post_content">
                     <label><a href="#">Lorem ipsum dolor sit am</a></label>
                     <a href="#"><span class="fas fa-edit"></span></a>
                     <a href="#"><span class="fas fa-trash"></span></a>
@@ -74,7 +77,7 @@
                     <label><a href="#">Lorem ipsum dolor sit am</a></label>
                     <a href="#"><span class="fas fa-edit"></span></a>
                     <a href="#"><span class="fas fa-trash"></span></a>
-                </div>
+                </div> -->
             </div>
 
             <div class="subscribe">
