--- a/app/templates/owner/owner_post_view.html
+++ b/app/templates/owner/owner_post_view.html
@@ -4,27 +4,10 @@
 {% block content %}
 
 <div class="post_detial_view">
-    <h1>7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</h1>
-        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="product pic">
+    <h1> {{ post.title }} </h1>
+        <img src=" data:;base64,{{ image }} " alt="product pic">
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, 
-            itaque ipsum eveniet minima est commodi sed quam, accusantium 
-            ex mollitia nostrum aspernatur. Odio soluta tempora eius saepe, nostrum atque quidem.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, 
-            itaque ipsum eveniet minima est commodi sed quam, accusantium 
-            ex mollitia nostrum aspernatur. Odio soluta tempora eius saepe, nostrum atque quidem.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, 
-            itaque ipsum eveniet minima est commodi sed quam, accusantium 
-            ex mollitia nostrum aspernatur. Odio soluta tempora eius saepe, nostrum atque quidem.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, 
-            itaque ipsum eveniet minima est commodi sed quam, accusantium 
-            ex mollitia nostrum aspernatur. Odio soluta tempora eius saepe, nostrum atque quidem.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, 
-            itaque ipsum eveniet minima est commodi sed quam, accusantium 
-            ex mollitia nostrum aspernatur. Odio soluta tempora eius saepe, nostrum atque quidem.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, 
-            itaque ipsum eveniet minima est commodi sed quam, accusantium 
-            ex mollitia nostrum aspernatur. Odio soluta tempora eius saepe, nostrum atque quidem.
+            {{ post.article }}
         </p>
 </div>
 
