search funcationalty added to the dashboard

--- a/app/templates/owner/_searchbar.html
+++ b/app/templates/owner/_searchbar.html
@@ -1,7 +1,7 @@
 <div class="search_and_logout">
     <div class="search">
         <form action="">
-            <input type="search" placeholder="Search" required>
+            <input type="search" name="query" value="{{query}}" placeholder="Search Post" required>
             <button type="submit"><span class="fas fa-search"></span></button>
         </form>
     </div>
