--- a/app/templates/owner/owner_post.html
+++ b/app/templates/owner/owner_post.html
@@ -15,15 +15,33 @@
         <div class="post_in_postpage">
 
             <h2>Latest Post</h2>
+            {% for post in posts %}
             <div class="postpage_content">
-                <label><a href=" # ">7 Steps To OvercomeFRONTATION</a></label>
-                <a href="#"><span class="fas fa-edit"></span></a>
-                <a href="#"><span class="fas fa-trash"></span></a>
-                <a href=" # "><span class="fas fa-arrow-right"></span></a>
+                <label><a href="  {{ url_for('owner_post_view', id=post.id) }}  "> {{post.title}} </a></label>
+                <a href=" {{ url_for('edit_post', id=post.id) }} "><span class="fas fa-edit"></span></a>
+                <span onclick="add_CssClass()"  class="fas fa-trash"></span> 
+                <a href=" {{ url_for('owner_post_view', id=post.id) }} "><span class="fas fa-arrow-right"></span></a>
             </div>
 
 
-            <div class="postpage_content">
+            <div class="pop ">
+                <div class="pop_box ">
+                    <i class="fas fa-exclamation"></i>
+                    <h1>Your Post will be deleted Permanently!</h1>
+                    <label>Are you sure to proceed?</label>
+                
+                    <div class="btns">
+                        <a href="" class="btn1" onclick="remove_cssClass()">Cancel Process</a>
+                        <a href=" {{ url_for('delete_post', id=post.id) }} " class="btn2">Delete Post</a>
+                    </div>
+                
+                </div>
+            </div>
+
+            {% endfor %}
+
+
+            <!-- <div class="postpage_content">
                 <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
                 <a href="#"><span class="fas fa-edit"></span></a>
                 <a href="#"><span class="fas fa-trash"></span></a>
@@ -65,14 +83,19 @@
                 <a href="#"><span class="fas fa-edit"></span></a>
                 <a href="#"><span class="fas fa-trash"></span></a>
                 <a href="#"><span class="fas fa-arrow-right"></span></a>
-            </div>
+            </div> -->
 
 
             
 
             <div class="next_pre_btn">
-                <a href="#">next</a>
-                <a href="#">previous</a>
+                {% if next_url %}
+                <a href="{{next_url}}">Next</a>
+                {% endif %}
+                
+                {% if prev_url %}
+                <a href="{{prev_url}}">Pervious</a>
+                {% endif %}
             </div>
         </div>
 
