--- a/app/templates/owner/owner_post_view.html
+++ b/app/templates/owner/owner_post_view.html
@@ -5,10 +5,15 @@
 
 <div class="post_detial_view">
     <h1> {{ post.title }} </h1>
-        <img src=" data:;base64,{{ image }} " alt="product pic">
-        <p>
-            {{ post.article|safe }}
-        </p>
+    <img src=" data:;base64,{{ image }} " alt="product pic">
+    <div>
+        <span> {{ post.article_views}} views </span>
+        <span style="float: right;"> {{ post.timestamp.strftime("%d/%m/%Y") }}</span>
+    </div>
+
+    <p>
+        {{ post.article|safe }}
+    </p>
 </div>
 
 
