create route for edit and delete product in dashboard

--- a/app/templates/owner/owner_product.html
+++ b/app/templates/owner/owner_product.html
@@ -18,10 +18,26 @@
             {% for product in products %}
             <div class="postpage_content">
                 <label><a href=" {{ url_for('owner_product_view', id=product.id) }} ">{{product.title}}</a></label>
-                <a href="#"><span class="fas fa-edit"></span></a>
-                <a href="#"><span class="fas fa-trash"></span></a>
+                <a href=" {{ url_for('edit_product', id=product.id) }} "><span class="fas fa-edit"></span></a>
+                <span onclick="add_CssClass()" class="fas fa-trash"></span>
                 <a href=" {{ url_for('owner_product_view', id=product.id) }} "><span class="fas fa-arrow-right"></span></a>
             </div>
+
+            <div class="pop ">
+                <div class="pop_box ">
+                    {% if product %}
+                    <i class="fas fa-exclamation"></i>
+                    <h1>Your Product will be deleted Permanently!</h1>
+                    <label>Are you sure to proceed?</label>
+                
+                    <div class="btns">
+                        <a href="" class="btn1" onclick="remove_cssClass()">Cancel Process</a>
+                        <a href=" {{ url_for('delete_product', id=product.id) }} " class="btn2">Delete Product</a>
+                    </div>
+                    {% endif %}
+                
+                </div>
+                </div>
 
             {% endfor %}
 
