--- a/app/templates/owner/owner_product_view.html
+++ b/app/templates/owner/owner_product_view.html
@@ -16,7 +16,7 @@
             <div class="shoping_card">
                 <img src="data:;base64,{{ image }} " alt="">
                 <h2>{{product.title}}</h2>
-                <span>$ {{product.description}}</span>
+                <span>$ {{product.price}}</span>
                 <a href=" {{ product.product_url }} " target="_blank"><button> BUY </button></a>
             </div>
         </div>
