add search functionalty to the dashboard routes

--- a/app/templates/owner/owner_index.html
+++ b/app/templates/owner/owner_index.html
@@ -26,7 +26,7 @@
 
             <div class="card">
                 <div class="card_content">
-                    <h1>120</h1>
+                    <h1>{{product_count|length}}</h1>
                     <p>Products</p>
                 </div>
                 <span class="fas fa-cart-arrow-down"></span>
