--- a/app/templates/owner/owner_search_post.html
+++ b/app/templates/owner/owner_search_post.html
@@ -43,6 +43,36 @@
                     
                 {% endfor %}
 
+                {% elif search_product %}
+
+                {% for product in search_product %}
+                <div class="postpage_content">
+                    <label><a href=" {{ url_for('owner_product_view', id=product.id) }} ">{{product.title}}</a></label>
+                    <a href=" {{ url_for('edit_product', id=product.id) }} "><span class="fas fa-edit"></span></a>
+                    <span onclick="add_CssClass()" class="fas fa-trash"></span>
+                    <a href=" {{ url_for('owner_product_view', id=product.id) }} "><span class="fas fa-arrow-right"></span></a>
+                </div>
+
+                <div class="pop ">
+                    <div class="pop_box ">
+                        {% if product %}
+
+                        <i class="fas fa-exclamation"></i>
+                        <h1>Your Product will be deleted Permanently!</h1>
+                        <label>Are you sure to proceed?</label>
+                    
+                        <div class="btns">
+                            <a href="" class="btn1" onclick="remove_cssClass()">Cancel Process</a>
+                            <a href=" {{ url_for('delete_product', id=product.id) }} " class="btn2">Delete Product</a>
+                        </div>
+                        
+                        {% endif %}
+                    
+                    </div>
+                </div>
+
+                {% endfor %}
+
                 {% else %}
                     <div class="post">
                         <h2>Your search - did not match any documents.</h2>
