--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -774,7 +774,7 @@ footer{
 
 .post_view_content img{
     width: 100%;
-    height: 80vh;
+    height: auto;
     margin-top: 10px;
     margin-bottom: 20px;
 }
@@ -869,7 +869,7 @@ footer{
 
 
 .latest_post h4{
-    color:#34495e;
+    color:blue;
     text-align: center;
     letter-spacing: 3px;
     margin-top: 20px;
@@ -884,12 +884,13 @@ footer{
     font-size: 1.1rem;
     margin-bottom: 20px;
     text-align: center;
+    text-transform: capitalize;
 }
 
 
 .latest_post p a{
     text-decoration: none;
-    color: #020887;
+    color: #34495e;
 }
 
 
