--- a/app/templates/client/index.html
+++ b/app/templates/client/index.html
@@ -46,45 +46,12 @@
     
     {% for post in posts %}
     <div class="card">
-        <img src=" data:;base64,{{image}} " alt="blog picture">
+        <img src=' data:;base64,{{ b64encode(post.image).decode("utf-8") }} ' alt="blog picture">
         <h2>{{post.title}}</h2>
-        <p>{{post.article|safe|truncate(300, True, '...')}}</p>
-        <a href=" {{ url_for('post_view')}} "><button> Read More </button></a>
+        <p>{{post.article|safe|truncate(270, True, '...')}}</p>
+        <a href=" {{ url_for('post_view', id=post.id)}} "><button> Read More </button></a>
     </div>
     {% endfor %}
-
-    <!-- <div class="card">
-        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
-        <h2>7 Steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
-            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
-        </p>
-        <a href="#"><button> Read More </button></a>
-    </div>
-
-    <div class="card">
-        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
-        <h2>7 Steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
-            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
-        </p>
-        <a href="#"><button> Read More </button></a>
-    </div>
-
-    <div class="card">
-        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
-        <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
-            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
-        </p>
-        <a href="#"><button> Read More </button></a>
-    </div> -->
   
 </div>
 
