create route for retrive posts in blog client page

--- a/app/templates/client/_footer.html
+++ b/app/templates/client/_footer.html
@@ -13,7 +13,7 @@
             <h3>Categories</h3>
             <ul>
                 <li><a href="{{ url_for('index') }}" id="a" class="addActive"> Home </a></li>
-                <li><a href="#" class="addActive"> Shop </a></li>
+                <li><a href="{{ url_for('shop') }}" class="addActive"> Shop </a></li>
                 <li><a href="{{ url_for('blog') }}" class="addActive"> Blog </a></li>
                 <li><a href="#" class="addActive"> Privacy Policy </a></li>
             </ul>
