--- a/app/templates/client/blog.html
+++ b/app/templates/client/blog.html
@@ -19,7 +19,16 @@
 
 <div class="cardsContainer">
     
+    {% for post in posts %}
     <div class="card">
+        <img src=' data:;base64,{{ b64encode(post.image).decode("utf-8") }} ' alt="blog picture">
+        <h2>{{post.title}}</h2>
+        <p>{{post.article|safe|truncate(270, True, '...')}}</p>
+        <a href=" {{ url_for('post_view', id=post.id)}} "><button> Read More </button></a>
+    </div>
+    {% endfor %}
+
+    <!-- <div class="card">
         <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
         <h2>7 Steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
         <p>
@@ -43,17 +52,6 @@
 
     <div class="card">
         <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
-        <h2>7 Steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
-            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
-        </p>
-        <a href="#"><button> Read More </button></a>
-    </div>
-
-    <div class="card">
-        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
         <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -105,13 +103,17 @@
             eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
         </p>
         <a href="#"><button> Read More </button></a>
-    </div>
+    </div> -->
   
 </div>
 
 <div class="next_previous">
-    <a href="">next</a>
+    {% if next_url %}
+    <a href=" {{next_url}} ">next</a>
+    {% endif %}
+    {% if prev_url %}
     <a href="">previous</a>
+    {% endif %}
 </div>
 
 {% include 'client/_footer.html' %}
