subscriber store in database

--- a/app/templates/client/blog.html
+++ b/app/templates/client/blog.html
@@ -8,8 +8,8 @@
     <div class="blog_header_content">
         <h1>GET Best Product TIPS FOR YOUR SUCCESS</h1>
         <div class="Subscribe_form">
-            <form action="">
-                <input type="email" placeholder="Enter Your Email" required>
+            <form action="" method="POST">
+                <input type="email" name="email" placeholder="Enter Your Email" required>
                 <button type="submit">Get Started</button>
             </form>
         </div>
@@ -27,83 +27,6 @@
         <a href=" {{ url_for('post_view', id=post.id)}} "><button> Read More </button></a>
     </div>
     {% endfor %}
-
-    <!-- <div class="card">
-        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
-        <h2>7 Steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
-            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
-        </p>
-        <a href="#"><button> Read More </button></a>
-    </div>
-
-    <div class="card">
-        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
-        <h2>7 Steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
-            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
-        </p>
-        <a href="#"><button> Read More </button></a>
-    </div>
-
-    <div class="card">
-        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
-        <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
-            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
-        </p>
-        <a href="#"><button> Read More </button></a>
-    </div>
-
-    <div class="card">
-        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
-        <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
-            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
-        </p>
-        <a href="#"><button> Read More </button></a>
-    </div>
-
-    <div class="card">
-        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
-        <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
-            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
-        </p>
-        <a href="#"><button> Read More </button></a>
-    </div>
-
-    <div class="card">
-        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
-        <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
-            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
-        </p>
-        <a href="#"><button> Read More </button></a>
-    </div>
-
-    <div class="card">
-        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
-        <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
-            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
-        </p>
-        <a href="#"><button> Read More </button></a>
-    </div> -->
   
 </div>
 
