--- a/app/templates/client/post_view.html
+++ b/app/templates/client/post_view.html
@@ -20,8 +20,8 @@
 
         <div class="post_subscribe_form">
             <h2>Get In Touch</h2>
-            <form action="">
-                <input type="email" placeholder="Enter Email Address" required>
+            <form action="" method="POST">
+                <input type="email" name="email" placeholder="Enter Email Address" required>
                 <button type="submit"> Subscribe Me </button>
             </form>
         </div>
