--- a/app/templates/client/index.html
+++ b/app/templates/client/index.html
@@ -32,8 +32,8 @@
     </div>
 
     <div class="subscribeForm">
-        <form action="">
-            <input type="email" name="email" placeholder="Enter your email" required> 
+        <form action="" method="POST">
+            <input type="email" name="email" placeholder="Type your email" required> 
             <button type="submit">Subscribe Me</button>
         </form>
     </div>
