--- a/app/templates/client/shop.html
+++ b/app/templates/client/shop.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="subscribeForm">
-        <form action="">
+        <form action="" method="POST">
             <input type="email" name="email" placeholder="Enter your email" required> 
             <button type="submit">Subscribe Me</button>
         </form>
