store contact data in database

--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -623,6 +623,7 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 3rem;
 }
 
 
@@ -683,7 +684,7 @@ footer{
     font-weight: bold;
     font-family: inherit;
     letter-spacing: 3px;
-    margin-top: 10px;
+    margin-top: 2rem;
     text-transform: uppercase;
     text-shadow: 2px 2px 2px gray;
     background-color: #9bc634;
