--- a/app/templates/client/contact.html
+++ b/app/templates/client/contact.html
@@ -9,11 +9,11 @@
 
     <div class="contact_page">
         <div class="contact_form">
-            <h1>Contact Form</h1>
-            <form action="">
-                <input type="text" placeholder="Enter Your Name" required>
-                <input type="email" placeholder="Enter Your Email" required>
-                <textarea>Enter Your Query</textarea>
+            
+            <form action="" method="POST">
+                <input type="text" name="name" placeholder="Type Your Name" required>
+                <input type="email" name="email" placeholder="Type Your Email" required>
+                <textarea name="question">Type Your Query</textarea>
                 <button type="submit">Submit</button>
             </form>
         </div>
