--- a/app/templates/client/index.html
+++ b/app/templates/client/index.html
@@ -13,7 +13,7 @@
                 Soluta corrupti, tempora aliquid harum atque esse. Modi ipsam, accusantium maxime, 
                 temporibus labore consectetur asperiores veniam dolorem minus aspernatur debitis perspiciatis. Illum.
             </p>
-            <button> <a href="#"> Shop Now</a> </button>
+            <button> <a href=" {{ url_for('shop') }} "> Shop Now</a> </button>
         </div>
 
         <div class="content_img">
